logistic regression with sklearn

--- a/Detecting Frauds with Logistic Regression.ipynb
+++ b/Detecting Frauds with Logistic Regression.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "4           43455  17.756828  weekend  False"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +197,13 @@
        "4           43455  17.756828  weekend      0        0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Change 'day' and 'fraud' columns into dummy vaariables\n",
+    "# Change 'day' and 'fraud' columns into dummy variables\n",
     "df['weekday'] = pd.get_dummies(df['day'])['weekday']\n",
     "df[['not_fraud','fraud']] = pd.get_dummies(df['fraud'])\n",
     "df = df.drop('not_fraud', axis=1)  # abbiamo bisogno di solo n-1 colonne dummy per colonne categoriche (in questo caso i livelli sono solo 2: fraud e not_fraud)\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -258,10 +258,10 @@
        "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     2</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Tue, 08 Jan 2019</td> <th>  Pseudo R-squ.:     </th>  <td>   inf</td> \n",
+       "  <th>Date:</th>          <td>Wed, 09 Jan 2019</td> <th>  Pseudo R-squ.:     </th>  <td>   inf</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>18:12:29</td>     <th>  Log-Likelihood:    </th> <td>    -inf</td>\n",
+       "  <th>Time:</th>              <td>15:00:58</td>     <th>  Log-Likelihood:    </th> <td>    -inf</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td>  0.0000</td>\n",
@@ -293,8 +293,8 @@
        "Dep. Variable:                  fraud   No. Observations:                 8793\n",
        "Model:                          Logit   Df Residuals:                     8790\n",
        "Method:                           MLE   Df Model:                            2\n",
-       "Date:                Tue, 08 Jan 2019   Pseudo R-squ.:                     inf\n",
-       "Time:                        18:12:29   Log-Likelihood:                   -inf\n",
+       "Date:                Wed, 09 Jan 2019   Pseudo R-squ.:                     inf\n",
+       "Time:                        15:00:58   Log-Likelihood:                   -inf\n",
        "converged:                       True   LL-Null:                        0.0000\n",
        "                                        LLR p-value:                     1.000\n",
        "==============================================================================\n",
@@ -311,7 +311,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "12.762357271496972"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "0.2313785882117941"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4.321921089278333"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,35 +415,339 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Option 2 - using [sklearn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>day</th>\n",
+       "      <th>fraud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28891</td>\n",
+       "      <td>21.302600</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61629</td>\n",
+       "      <td>22.932765</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53707</td>\n",
+       "      <td>32.694992</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>47812</td>\n",
+       "      <td>32.784252</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43455</td>\n",
+       "      <td>17.756828</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transaction_id   duration      day  fraud\n",
+       "0           28891  21.302600  weekend  False\n",
+       "1           61629  22.932765  weekend  False\n",
+       "2           53707  32.694992  weekday  False\n",
+       "3           47812  32.784252  weekend  False\n",
+       "4           43455  17.756828  weekend  False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "df = pd.read_csv('fraud_dataset.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>day</th>\n",
+       "      <th>fraud</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28891</td>\n",
+       "      <td>21.302600</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61629</td>\n",
+       "      <td>22.932765</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53707</td>\n",
+       "      <td>32.694992</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>47812</td>\n",
+       "      <td>32.784252</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43455</td>\n",
+       "      <td>17.756828</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transaction_id   duration      day  fraud  weekday\n",
+       "0           28891  21.302600  weekend      0        0\n",
+       "1           61629  22.932765  weekend      0        0\n",
+       "2           53707  32.694992  weekday      0        1\n",
+       "3           47812  32.784252  weekend      0        0\n",
+       "4           43455  17.756828  weekend      0        0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change 'day' and 'fraud' columns into dummy variables\n",
+    "df['weekday'] = pd.get_dummies(df['day'])['weekday']\n",
+    "df[['not_fraud','fraud']] = pd.get_dummies(df['fraud'])\n",
+    "df = df.drop('not_fraud', axis=1) \n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option 2 - using sklearn"
+    "#### Defining dependent and independent variables to make the model with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = df['fraud'] # define response column\n",
+    "X = df[['duration','weekday']] # defining independent variables\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)  # splitting dataset in train and test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fitting the model on the training set and predicting y on the test set"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "log_mod = LogisticRegression()  \n",
+    "log_mod.fit(X_train, y_train) # fitting model on training set\n",
+    "y_preds = log_mod.predict(X_test)  # predicting y on test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Metrics"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9444444444444444"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_test, y_preds)  # PRECISION: focuses on false positives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_test, y_preds)   # RECALL: focuses on false negatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9994314951677089"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_preds)   # ACCURACY: focuses on the % of y labelled correctly (regardless if positives or negatives)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1741,    1],\n",
+       "       [   0,   17]], dtype=int64)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_preds)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### From the confusion matrix we can see that on the test set (20% of the entire dataset),  the model correctly predicted 1741 not_fraud out of 1742 (one not_fraud was labelled as fraud) and 17 fraud out of 17."
+   ]
   }
  ],
  "metadata": {
