style: Added description and purpose of the file

--- a/Detecting Frauds with Logistic Regression.ipynb
+++ b/Detecting Frauds with Logistic Regression.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will be fitting a logistic regression model to a dataset where we would like to predict if a transaction is fraud or not."
+    "# Detecting Frauds with Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fitting a Logistic Regression Model to a dataset with the aim of predicting wether a transaction is fraud or not.\n",
+    "\n",
+    "**The Logistic Regerssion is a methodology used to predict the value of the dichotomic dependent variable Y, based on a set of explanantory variables, which could be either quantitative and qualitative.**\n",
+    "\n",
+    "***Y* is the qualitative response, which describes the outcome of a random event *X*.**\n",
+    "***Y* can be 0 or 1.**\n",
+    "\n",
+    "**In the following project, we are going to analyse a transactions dataset, and analyse wether their duration and day of the week they were made have an effect on the likelyhood of turning out to be a fraud.**\n",
+    "\n",
+    "**In order to fit the Logistic Regression we will be first using the library *statsmodels*, then the library *scikit-learn*.**"
    ]
   },
   {
@@ -16,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +111,7 @@
        "4           43455  17.756828  weekend  False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +213,7 @@
        "4           43455  17.756828  weekend      0        0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,14 +222,14 @@
     "# Change 'day' and 'fraud' columns into dummy variables\n",
     "df['weekday'] = pd.get_dummies(df['day'])['weekday']\n",
     "df[['not_fraud','fraud']] = pd.get_dummies(df['fraud'])\n",
-    "df = df.drop('not_fraud', axis=1)  # abbiamo bisogno di solo n-1 colonne dummy per colonne categoriche (in questo caso i livelli sono solo 2: fraud e not_fraud)\n",
+    "df = df.drop('not_fraud', axis=1)  # we only need n-1 dummy columns per cathegorical column\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,10 +274,10 @@
        "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     2</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Wed, 09 Jan 2019</td> <th>  Pseudo R-squ.:     </th>  <td>   inf</td> \n",
+       "  <th>Date:</th>          <td>Thu, 10 Jan 2019</td> <th>  Pseudo R-squ.:     </th>  <td>   inf</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>15:00:58</td>     <th>  Log-Likelihood:    </th> <td>    -inf</td>\n",
+       "  <th>Time:</th>              <td>15:56:35</td>     <th>  Log-Likelihood:    </th> <td>    -inf</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td>  0.0000</td>\n",
@@ -293,8 +309,8 @@
        "Dep. Variable:                  fraud   No. Observations:                 8793\n",
        "Model:                          Logit   Df Residuals:                     8790\n",
        "Method:                           MLE   Df Model:                            2\n",
-       "Date:                Wed, 09 Jan 2019   Pseudo R-squ.:                     inf\n",
-       "Time:                        15:00:58   Log-Likelihood:                   -inf\n",
+       "Date:                Thu, 10 Jan 2019   Pseudo R-squ.:                     inf\n",
+       "Time:                        15:56:35   Log-Likelihood:                   -inf\n",
        "converged:                       True   LL-Null:                        0.0000\n",
        "                                        LLR p-value:                     1.000\n",
        "==============================================================================\n",
@@ -311,7 +327,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +365,7 @@
        "12.762357271496972"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +392,7 @@
        "0.2313785882117941"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +412,7 @@
        "4.321921089278333"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +516,7 @@
        "4           43455  17.756828  weekend  False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +620,7 @@
        "4           43455  17.756828  weekend      0        0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +688,7 @@
        "0.9444444444444444"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +708,7 @@
        "1.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +728,7 @@
        "0.9994314951677089"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +749,7 @@
        "       [   0,   17]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
